@@ -1,190 +1,6 @@
 #include "estimator.h"
 #include "combinefunction.h"
 
-/* /\* */
-/*  * Estimates the delay of one function with relation to another by calculating */
-/*  * the probability density function at points with a certain distance between them. */
-/*  * The minimum of the sum of these probability density functions is taken as the */
-/*  * best estimate of the delay. The max_delay parameter specifies the maximum */
-/*  * positive or negative delay to consider when attempting to find an estimate. */
-/*  * The resolution specifies the step between points on the x-axis which are */
-/*  * compared. A high resolution will take longer, but the estimate will be more */
-/*  * accurate. */
-/*  *\/ */
-/* double estimate_delay_pmf(paramlist* params, char* infile, double_arr* events, void* f1, */
-/* 			  void* f2, char* type) */
-/* { */
-/*     // Always work on two streams */
-/*     int num_streams = 2; */
-/*     // Resolution when combining functions */
-/*     double combine_step = get_double_param(params, "delta_est_pmf_resolution"); */
-/*      // Start of the interval used when combining the functions */
-/*     double combine_start = get_double_param(params, "delta_est_combine_start"); */
-/*     // Length of the interval when combining functions */
-/*     double combine_interval = get_double_param(params, "delta_est_combine_interval"); */
-/*     double combine_end = combine_start + combine_interval; */
-/*     // Start value for finding the normalisation constant */
-/*     double normaliser_start = get_double_param(params, "normaliser_est_initial"); */
-/*     // Maximum value to allow the normalisation function to look at */
-/*     double normaliser_end = get_double_param(params, "normaliser_est_max"); */
-/*     // Increase the normalisation constant value by this each iteration */
-/*     double normaliser_step = get_double_param(params, "normaliser_est_step"); */
-/*     // Number of subintervals to use when checking normalisation */
-/*     int normaliser_subintervals = get_int_param(params, "normaliser_est_subintervals"); */
-/*     // Number of bins into which we split the event data */
-/*     int num_bins = get_int_param(params, "delta_est_num_bins"); */
-/*     double max_delay = get_double_param(params, "delta_est_max_delta"); */
-/*     double step = get_double_param(params, "delta_est_step"); */
-
-/*     double bin_length = (combine_end - combine_start)/num_bins; */
-/*     double start_delta = -max_delay, end_delta = max_delay; */
-/* //    double start_delta = 0; */
-/*     double current_delta = start_delta; */
-    
-/*     printf("Estimating delay with pmf method.\n Combine step %lf, Combine interval"\ */
-/* 	   " [%lf %lf], Normaliser interval [%lf %lf],\n Normaliser step %lf,"\ */
-/* 	   " Normaliser subintervals %d, Bins %d, Max delay %lf, Step %lf\n", */
-/* 	   combine_step, combine_start, combine_end, normaliser_start, normaliser_end, */
-/* 	   normaliser_step, normaliser_subintervals, num_bins, max_delay, step); */
-
-/*     // Set the initial values for our estimate */
-/*     double best_delta = -INFINITY; */
-/*     double best_value = -INFINITY; */
-    
-/*     // We don't know which type we will get, so use a void pointer to store */
-/*     // it and cast later. */
-/*     void** store = NULL;  */
-
-/*     if (strcmp(type, "gauss") == 0){ */
-/* 	store = malloc(sizeof(gauss_vector*) * 2); */
-/* 	store[0] = (gauss_vector*)f1; */
-/* 	store[1] = (gauss_vector*)f2; */
-/*     } else if (strcmp(type, "base") == 0){ */
-/* 	store = malloc(sizeof(est_arr*) * 2); */
-/* 	store[0] = (est_arr*)f1; */
-/* 	store[1] = (est_arr*)f2; */
-/*     } */
-
-/*     double_arr* time_delay = init_double_arr(2); */
-/*     time_delay->data[0] = 0; */
-/*     double_multi_arr* combined = NULL; */
-
-/*     double normaliser = find_normaliser(f1, events, combine_start, combine_end, */
-/* 					normaliser_start, normaliser_end, */
-/* 					normaliser_step, normaliser_subintervals, */
-/* 					type); */
-
-    
-/*     int* bin_counts = sum_events_in_interval(events->data, events->len, combine_start, */
-/* 					     combine_end, num_bins); */
-/*     double* midpoints = get_interval_midpoints(combine_start, combine_end, */
-/* 					       num_bins); */
-/*     double* lambda_sums = malloc(sizeof(double) * num_bins); */
-    
-/*     FILE *fp = fopen("bins", "w"); */
-/*     int i; */
-/*     for (i = 0; i < num_bins; ++i) { */
-/* 	//	printf("bin %d [%d, %d] has %d events\n", i, i * bin_length, (i + 1) * bin_length, bin_counts[i]); */
-/* 	bin_counts[i] /= combine_interval/num_bins; */
-/* 	fprintf(fp, "%lf %d\n", midpoints[i], bin_counts[i]); */
-/*     } */
-
-/*     fclose(fp); */
-
-/*     FILE *fp2 = fopen("pmf_delay_vals", "w"); */
-
-/*     int skip_bins = (int) end_delta/bin_length; */
-
-/*     while (current_delta <= end_delta){ */
-/* 	// get the combined function with the delay applied */
-/* 	// compare the combined function to the bin counts of the stream by calculating the pmf for each interval */
-/* 	// to do this, first get the bin counts. These will remain constant for the function. */
-/* 	// then, calculate the interval times for each bin, which will be the same for each */
-/* 	// sum the values of lambda within this interval at each time. This will be one lambda per second, probably, */
-/* 	// since each lambda represents the number of arrivals per single time step */
-/* 	// finally, find the poisson pmf of the two values - gsl_ran_poisson_pdf(bin count, lambda sum for bin) */
-/* 	printf("current delta is %lf\n", current_delta); */
-/* 	time_delay->data[1] = current_delta; */
-/* 	if (strcmp(type, "gauss") == 0){ */
-/*       	    combined = combine_gauss_vectors((gauss_vector**)store, time_delay, */
-/* 					     combine_start, combine_end, combine_step, */
-/* 					     num_streams); */
-/*     	} else if (strcmp(type, "base") == 0){ */
-/*     	    combined = combine_functions((est_arr**)store, time_delay, */
-/* 					 combine_interval, combine_step, num_streams); */
-/* 	/\* if (strcmp(type, "gauss") == 0){ *\/ */
-/*       	/\*     combined = combine_gauss_vectors_all((gauss_vector**)store, time_delay, *\/ */
-/* 	/\* 				     combine_start, combine_end, combine_step, *\/ */
-/* 	/\* 				     num_streams); *\/ */
-/*     	/\* } else if (strcmp(type, "base") == 0){ *\/ */
-/*     	/\*     combined = combine_functions_all((est_arr**)store, time_delay, combine_start, *\/ */
-/* 	/\* 				 combine_interval, combine_step, num_streams); *\/ */
-/*     	} else { */
-/* 	    printf("Unknown type for estimate \"%s\" when estimating delta.\n", type); */
-/* 	    exit(1); */
-/* 	} */
-
-/* 	for (i = 0; i < num_bins; ++i) { */
-/* 	    // find the sum of lambda values for each subinterval */
-/* //	    printf("bin count %d: %d\n", i, bin_counts[i]); */
-/* //	    printf("subinterval start %lf, subinterval end %lf\n", i * bin_length, (i + 1) * bin_length); */
-/* 	    lambda_sums[i] = sum_array_interval(combined->data[0], combined->data[1], */
-/* 						i * bin_length, (i + 1) * bin_length, */
-/* 						normaliser, combined->lengths[0])/ (combine_interval/num_bins); */
-/* //	    printf("sum of lambdas in interval %lf\n", lambda_sums[i]); */
-/* 	} */
-
-/* 	char* cb = malloc(15); */
-/* 	sprintf(cb, "cfunc%.0lf", current_delta); */
-
-/* 	FILE *fp1 = fopen(cb, "w"); */
-
-/* 	for (i = 0; i < combined->lengths[0]; ++i) { */
-/* 	    fprintf(fp1, "%lf %lf\n", combined->data[0][i], combined->data[1][i]); */
-/* 	} */
-
-/* 	fclose(fp1); */
-	
-/* 	char* ls = malloc(15); */
-/* 	sprintf(ls, "lsums%.0lf", current_delta); */
-/* 	FILE *fp3 = fopen(ls, "w"); */
-	
-/* 	for (i = 0; i < num_bins; ++i) { */
-/* 	    fprintf(fp3, "%lf %lf\n", midpoints[i], lambda_sums[i]); */
-	    
-/* 	} */
-/* 	fclose(fp3); */
-
-
-
-/* 	double total = sum_log_pmfs(bin_counts + skip_bins, lambda_sums + skip_bins, 1, num_bins - 2 * skip_bins); */
-/* //	double total = sum_log_pmfs(bin_counts, lambda_sums, 1, num_bins); */
-/* 	fprintf(fp2, "%lf %lf\n", current_delta, total); */
-/* 	if (total > best_value){ */
-/* 	    printf("New value %lf is less than old %lf. guess updated to %lf\n", total, best_value, current_delta); */
-/*             best_value = total; */
-/*             best_delta = current_delta; */
-/* 	    FILE *fp1 = fopen("best_lsums", "w"); */
-       
-/* 	    for (i = 0; i < num_bins; ++i) { */
-/* 		fprintf(fp1, "%lf %lf\n", midpoints[i], lambda_sums[i]); */
-/* 	    } */
-/* 	    fclose(fp1); */
-/* 	} else { */
-/* 	    printf("New value %lf at %lf is larger than old %lf. guess remains at %lf\n", total, current_delta, best_value, best_delta); */
-/*         } */
-
-/* 	current_delta += step; */
-/*     } */
-    
-/*     fclose(fp2); */
-/*     printf("Normaliser is %lf\n", normaliser); */
-/*     printf("number of bins that need to be skipped %d\n", skip_bins); */
-/*     output_double_multi_arr("pmf_combined", "w", combined); */
-
-/*     return best_delta; */
-/* } */
-
 double estimate_delay_pmf(paramlist* params, void* f1, void* f2, char* type)
 {
     // Always work on two streams
@@ -217,7 +33,6 @@ double estimate_delay_pmf(paramlist* params, void* f1, void* f2, char* type)
 
     double bin_length = (combine_end - combine_start)/num_bins;
     double start_delta = -max_delay, end_delta = max_delay; // 
-//    double start_delta = 0;
     double current_delta = start_delta;
     
     char* fname = get_string_param(params, "outfile"); // default generator output filename
@@ -263,17 +78,20 @@ double estimate_delay_pmf(paramlist* params, void* f1, void* f2, char* type)
     time_delay->data[0] = 0;
     double_multi_arr* combined = NULL;
 
+    // Find a normalisation constant. This is needed to make the estimated function
+    // correctly line up with the original. For baseline estimates, this is usually 1.
     double normaliser = find_normaliser(f1, ev1, combine_start, combine_end,
 					normaliser_start, normaliser_end,
 					normaliser_step, normaliser_subintervals,
 					type);
 
-    
+    // PMF sums will be calculated for both streams.
     int* bin_counts1 = sum_events_in_interval(ev1->data, ev1->len, combine_start,
 					     combine_end, num_bins);
     int* bin_counts2 = sum_events_in_interval(ev2->data, ev2->len, combine_start,
 					     combine_end, num_bins);
 	
+    
     double* midpoints = get_interval_midpoints(combine_start, combine_end,
 					       num_bins);
     double* lambda_sums = malloc(sizeof(double) * num_bins);
@@ -281,15 +99,16 @@ double estimate_delay_pmf(paramlist* params, void* f1, void* f2, char* type)
     FILE *fp = fopen("bins", "w");
     int i;
     for (i = 0; i < num_bins; ++i) {
-	//	printf("bin %d [%d, %d] has %d events\n", i, i * bin_length, (i + 1) * bin_length, bin_counts[i]);
-	/* bin_counts1[i] /= (combine_interval/ num_bins); */
-	/* bin_counts2[i] /= (combine_interval/num_bins); */
+    	//	printf("bin %d [%d, %d] has %d events\n", i, i * bin_length, (i + 1) * bin_length, bin_counts[i]);
+    	/* bin_counts1[i] /= (combine_interval/ num_bins); */
+    	/* bin_counts2[i] /= (combine_interval/num_bins); */
 	
-	fprintf(fp, "%lf %d %d\n", midpoints[i], bin_counts1[i], bin_counts2[i]);
+    	fprintf(fp, "%lf %d %d\n", midpoints[i], bin_counts1[i], bin_counts2[i]);
     }
 
     fclose(fp);
 
+    // How many bins need to be skipped to ensure that only the bins that are present in 
     int skip_bins = (int) end_delta/bin_length;
 
     FILE *fp2 = fopen("pmf_delay_vals", "w");
@@ -311,14 +130,6 @@ double estimate_delay_pmf(paramlist* params, void* f1, void* f2, char* type)
     	} else if (strcmp(type, "base") == 0){
     	    combined = combine_functions((est_arr**)store, time_delay, combine_start,
 					 combine_interval, combine_step, num_streams);
-
-	/* if (strcmp(type, "gauss") == 0){ */
-      	/*     combined = combine_gauss_vectors_all((gauss_vector**)store, time_delay, */
-	/* 				     combine_start, combine_end, combine_step, */
-	/* 				     num_streams); */
-    	/* } else if (strcmp(type, "base") == 0){ */
-    	/*     combined = combine_functions_all((est_arr**)store, time_delay, combine_start, */
-	/* 				 combine_interval, combine_step, num_streams); */
     	} else {
 	    printf("Unknown type for estimate \"%s\" when estimating delta.\n", type);
 	    exit(1);
